--- a/templates/admin/banner.html.twig
+++ b/templates/admin/banner.html.twig
@@ -4,9 +4,10 @@
 
     <!-- internal page menu, to navigate to ID -->
     <div id="nav--inpage">
-        <a href="#section--users">Les utilisateurs</a>
-        <a href="#section--customers">Les clients</a>
-        <a href="#section--drivers">Les pilotes</a>
+        <a class="btn nav--inpage-btn-bgb" href="{{ path('flatrate_read') }}">Les tarifs</a>
+        <a class="btn nav--inpage-btn-bgb" href="#section--users">Les utilisateurs</a>
+        <a class="btn nav--inpage-btn-bgb" href="#section--customers">Les clients</a>
+        <a class="btn nav--inpage-btn-bgb" href="#section--drivers">Les pilotes</a>
     </div>
     
 </section>
