--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,5 +1,4 @@
-Controle de l'xistance d'une entreprise :
-https://avis-situation-sirene.insee.fr/
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello DriverController!{% endblock %}
@@ -9,7 +8,8 @@ https://avis-situation-sirene.insee.fr/
 <!-- Admin Controller banner -->
 {{ include('admin/banner.html.twig') }}
 
-
+Controle de l'existance d'une entreprise :
+https://avis-situation-sirene.insee.fr/
 
 
 {% endblock %}
