--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,16 +84,18 @@
                                 </a>
                             </li>
                             {% if is_granted("ROLE_ADMIN") %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <li class="nav-item "><!--dropdown">
+                                <a class="nav-link dropdown-toggle" href="{{ path('profile_user', {'id': app.user.id}) }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                -->
+                                <a class="nav-link" href="{{ path('admin_index') }}">
                                     <i class="ri-admin-line"></i>
                                     <!-- &nbsp; -->
                                     Administration
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="{#{{ path('...') }}#}">...</a>
                                     <a class="dropdown-item" href="{#{{ path('...') }}#}">...</a>
-                                </div>
+                                </div> -->
                             </li>
                             {% endif %}
                             <li class="nav-item">
