--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -55,10 +55,10 @@
     <section class="paragraph--large" id="section--advices">
         {#{% if siteadvices_last is defined %}#}
         <h2 class="title--h2" id="advices--title">L'avis des utilisateurs de l'annuaire</h2>
-        <div class="card--inset" id="advices--3lasts col-10">
+        <div class="card--inset" id="advices--3lasts">
             <!-- <div class="card--inset"> -->
                 {#{% for advice in siteadvices_last %}#}
-                <div class="card--advice card--3D-vertical col-12 col-md-5 col-xl-3.5">
+                <div class="card--advice card--3D-vertical col-12 col-md-4 col-xl-3">
                     <div class='d-flex flex-row justify-content-between'>
                         <div>
                             <h4>Prénom</h4>
@@ -79,7 +79,7 @@
                         Les pilotes sont très pros, toujours ponctuels et courtois. Pour les passagers débutants, ils savent mettre en confiance...
                     </span>
                 </div>
-                <div class="card--advice card--3D-vertical col-12 col-md-5 col-xl-3">
+                <div class="card--advice card--3D-vertical col-12 col-md-4 col-xl-3">
                     <div class='d-flex flex-row justify-content-between'>
                         <div>
                             <h4>Prénom</h4>
@@ -98,7 +98,7 @@
                         Ce site est génial !
                     </span>
                 </div>
-                <div class="card--advice card--3D-vertical col-12 col-md-5 col-xl-3">
+                <div class="card--advice card--3D-vertical col-12 col-md-4 col-xl-3">
                     <div class='d-flex flex-row justify-content-between'>
                         <div>
                             <h4>Prénom</h4>
