--- a/templates/profile/customer.html.twig
+++ b/templates/profile/customer.html.twig
@@ -8,7 +8,7 @@
     {{ include('profile/banner.html.twig') }}
     
     {% if app.user %}
-
+Proposer ici au client de gérer ses "commande de courses", réponses à devis, et autres...
     {% endif %}
 
 {% endblock %}
