--- a/templates/profile/driver.html.twig
+++ b/templates/profile/driver.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('profile/banner.html.twig') }}
     
-    <h2>Proposer au Driver de gérer ses demandes de courses (=> envoi de devis)...</h2>
+    <h2>Proposer ici au Driver de gérer ses demandes de courses (=> envoi de devis)...</h2>
     <h2> ... de gérer ses commandes en cours (=> contact client / annulation)</h2>
     <h2> ... de gérer ses courses exécutées (=> contact client / envoi facture)</h2>
     <h2> ... et évidemment, gestion modification de ses données personnelles et d'entreprise...</h2>
