--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,7 +8,7 @@
     {% endfor %}
 
     
-<form class="container-fluid mt-5" method="post"> 
+<form class="container-fluid mt-5 w-75" method="post"> 
     <div class="card--3D-vertical">
         <h1 class="h3 mb-3 font-weight-normal">Enregistrez-vous : <small style="color:red;font-size:0.5em;">(* champs obligatoire)</small></h1>
 
