--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,10 @@
+.test{
+    border:1px solid black;
+}
+.testr{
+    border:1px solid red;
+}
+
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900display=swap%27);
 *{
     font-family: "Poppins", sans-serif;
@@ -28,7 +35,7 @@
 .btn-secondary{
     border-radius: 5px;
 }
-.btn-secondary:hover,.img--profile:hover{
+.btn-secondary:hover,.imgbtn--profile:hover{
     box-shadow:inset 3px 3px 6px black;
 }
 
@@ -330,18 +337,20 @@ body{
     display:flex;
     flex-direction:column;
     flex-wrap:wrap;
+    justify-content:center;
+    /* align-items: center; */
     /**/
     overflow:hidden;
     text-overflow:ellipsis;
     flex-shrink:2;
-    /* */
-    padding:20px;
+    /**/
+    padding:0.5em;
     box-shadow:inset 
     0 -3em 3em rgba(0,0,0,0.1),
     0 0  0 1px rgb(255,255,255),
     0.3em 0.3em 1em rgba(0,0,0,0.3);
     border-radius:3px;
-    margin:1em;
+    margin:0.5em;
 }
 /**
  *
@@ -355,9 +364,9 @@ body{
     box-shadow:inset 3px 3px 8px grey;
     border-radius: 5px;
 }
-/* .card--3D-horizontal:hover,.card--3D-vertical:hover{ */
-    /* border:3px solid black; */
-/* } */
+/* .card--3D-horizontal:hover,.card--3D-vertical:hover{
+    border:3px solid black;
+} */
 /* */
 /* .card--paragraph{ */
 /* } */
@@ -469,6 +478,21 @@ body{
     text-shadow: 5px 5px 0.25em red;
     justify-self: center;
 }
+.card--footer-horizontal{
+    background-color:whitesmoke;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /**/
+    position:absolute;
+    bottom:0em;
+    left:-0.1em;
+    /**/
+    width:101%;
+    height:3em;
+    justify-content:center;
+    align-items:center;
+}
 
 
 
@@ -543,6 +567,10 @@ body{
     align-items:center;
 }
 .img--profile{
+    border:2px solid black;
+    height:100px;
+}
+.imgbtn--profile{
     border:2px solid black;
     height:100px;
 }
