--- a/templates/profile/changepwd.html.twig
+++ b/templates/profile/changepwd.html.twig
@@ -6,18 +6,10 @@
 
     {{ include('profile/banner.html.twig') }}
 	
-    <form class="modal--big container-fluid mt-5" method="post" enctype="multipart/form-data">
+    <form class="modal--big container-fluid mt-5 pt-5" method="post" enctype="multipart/form-data">
 		{{ form_start(changePwdForm) }}
-        <h1 class="h3 mb-3 font-weight-normal">Modifiez votre mot de passe :</h1>
+        <h1 class="h3 mt-3 mb-3 font-weight-normal">Modifiez votre mot de passe :</h1>
         <br>
-
-{#{{ dump(form) }}
-{{ dump(uploadroot) }}
-{{ form_start(form) }}
-{{ form_widget(form) }}
-<!-- <button class="btn">{{ button_label|default('Save') }}</button> -->
-{{ form_end(form) }}
-#}
 
 		<div>
 			<label class="required" for="inputPassword">Saisir votre mot de passe actuel :</label>
@@ -33,7 +25,7 @@
 			{#{{ form_help(changePwdForm.email)}}#}
 			{#{{ form_errors(changePwdForm.email)}}#}
 			<hr>
-			<label for="access_form_plainPassword_first">Définir un nouveau mot de passe :</label>
+			<label for="access_form_plainPassword_first required">Définir un nouveau mot de passe :</label>
 			{{ form_widget(changePwdForm.plainPassword
 							,{ label: 'Password' }
 						)
