--- a/templates/registration/driver.html.twig
+++ b/templates/registration/driver.html.twig
@@ -243,7 +243,7 @@
                         </div>
                         <div class="d-flex flex-column col-md-12 col-lg-7 align-items-center justify-content-center">
                             <label for="browse">
-                                <img class="img--profile" src="{{ asset(sImgPath ~'no-image.png') }}" alt="">
+                                <img class="imgbtn--profile" src="{{ asset(sImgPath ~'no-image.png') }}" alt="">
                             </label>
                             <input class="required" type="file" name="file" id="browse"
                                 {% if drivercard is not null %}
